@@ -120,6 +120,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - MPASM                  Bakalex
 - MXML                   David Spurr
 - MySQL                  Carl Fürstenberg, Marjolein Katsma
+- NewLisp                cormullion
 - NSIS                   Tux, Deguix
 - Oberon-2               Mike Mol
 - Objective C            M. Uli Kusterer
